# emulators

./: .gitignore  Cargo.toml  LICENSE
8080/cpu/: Cargo.toml
8080/cpu/src/: branch_call.rs  branch_jmp.rs  branch_ret.rs  cpu.rs  cycles.rs  executable.rs  instruction.rs  interruptions.rs  io.rs  lib.rs  logical.rs  math.rs  mov.rs  stack.rs  state.rs
8080/disassembler/: Cargo.toml
8080/disassembler/src/: lib.rs  main.rs
8080/emulator/: .gitignore  Cargo.toml  README.md  cpudiag.rom
8080/emulator/snake/: snake.asm
8080/emulator/src/: lib.rs  main.rs
8080/emulator/src/lib/: console.rs  io_devices.rs  lib.rs  mod.rs  screen.rs  timer.rs  view.rs
8080/emulator/src/lib/cpu/: branch.rs  branch_call.rs  branch_jmp.rs  branch_ret.rs  cpu.rs  cycles.rs  executable.rs  helpers.rs  instruction.rs  interruptions.rs  io.rs  logical.rs  math.rs  mod.rs  mov.rs  stack.rs  state.rs
8080/emulator/src/lib/io_devices/: buttons.rs  external_shift.rs  mod.rs  sounds.rs
8080/intel8080cpu/: Cargo.toml
8080/intel8080cpu/src/: branch_call.rs  branch_jmp.rs  branch_ret.rs  cpu.rs  cycles.rs  executable.rs  helpers.rs  instruction.rs  intel8080cpu.rs  interruptions.rs  io.rs  lib.rs  logical.rs  math.rs  mov.rs  stack.rs  state.rs
cpu/: Cargo.toml
cpu/src/: lib.rs
disassembler/: Cargo.toml
disassembler/src/: main.rs
docs/: 6502.txt  nestech.txt
intel8080_assembler/: Cargo.toml  README.md  cpudiag-e2e-test  cpudiag.asm  e2e-test
intel8080_assembler/src/: main.rs
intel8080_assembler/src/lib/: assembler.rs  lexer.rs  mod.rs  parser.rs
intel8080_assembler/tests/: comments.asm  comments.asm.out  numbers.asm  numbers.asm.out  org.asm  org.asm.out
intel8080cpu/: Cargo.toml
intel8080cpu/src/: branch_call.rs  branch_jmp.rs  branch_ret.rs  executable.rs  helpers.rs  instruction.rs  intel8080cpu.rs  interruptions.rs  io.rs  lib.rs  logical.rs  math.rs  mov.rs  stack.rs  state.rs
mos6502cpu/: Cargo.toml
mos6502cpu/src/: alu.rs  bit_utils.rs  branch.rs  control.rs  data_movement.rs  data_shifting.rs  instruction.rs  lib.rs  logical.rs  main.rs  math.rs  mos6502cpu.rs  stack.rs  undocumented.rs
nes/: Cargo.toml
nes/src/: main.rs
nes/src/lib/: mod.rs  nes.rs  nes_memory.rs  ppu.rs  ram.rs  video_ram.rs
nes/src/lib/ppu/: address_register.rs  mod.rs  ppu.rs  register_2000.rs  register_2001.rs  register_2002.rs  register_2003.rs  register_2004.rs  register_2007.rs  register_4014.rs  registers.rs  video_ram.rs
smoked/: Cargo.toml
smoked/benches/: fibonacci.rs
smoked/src/: allocator.rs  cpu.rs  instruction.rs  lib.rs  memory.rs  serde.rs
smoked/tests/: fibonacci.asm  fibonacci.asm.out  run-test  run-tests  test.asm  test.asm.out  write_stdout.asm  write_stdout.asm.out
space_invaders/: .gitignore  Cargo.toml
space_invaders/snake/: simple_snake.asm  snake.asm  snake.rom
space_invaders/src/: main.rs
space_invaders/src/lib/: console.rs  mod.rs  screen.rs  timer.rs  view.rs
space_invaders/src/lib/io_devices/: buttons.rs  external_shift.rs  mod.rs  sounds.rs
space_invaders/tools/: create-empty-wavs
src/: .main.rs.swp  main.rs
