[package]
name = "smoked"
version = "0.1.0"
authors = ["Agustin Chiappe Berrini <agustin@chiappeberrini.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "smoked"

[dependencies]
cpu = { path = "../cpu" }
failure = "~0.1.2"
log = "~0.4.8"
sc = "0.2.2"
