[package]
name = "smoked"
version = "0.1.0"
authors = ["Agustin Chiappe Berrini <agustin@chiappeberrini.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "smoked"

[[bin]]
name = "smoke-assembler"
path = "src/bin/smoke_assembler.rs"

[dependencies]
cpu = { path = "../cpu" }
failure = "~0.1.2"
log = "~0.4.8"
sc = { git = "https://github.com/AgustinCB/syscall.rs", rev = "3af491bae4f7dea97546d139c55212ff0334c65f" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "fibonacci"
harness = false
