[package]
name = "emulator_space_invaders"
version = "0.1.0"
authors = ["AgustinCB <jnieve@gmail.com>"]

[lib]
path = "src/lib/mod.rs"

[dependencies]
find_folder = "0.3.0"
intel8080cpu = { path = "../intel8080cpu" }
image = "0.22.1"
piston = "0.49.0"
piston-gfx_texture = "0.40"
piston2d-graphics = "0.35.0"
piston2d-opengl_graphics = "0.69.0"
piston_window = "0.105.0"
ears = "0.5.0"
failure = "0.1"
