[package]
name = "emulator_space_invaders"
version = "0.1.0"
authors = ["AgustinCB <jnieve@gmail.com>"]

[lib]
path = "src/lib/mod.rs"

[dependencies]
intel8080cpu = { path = "../intel8080cpu" }
image = "0.19.0"
piston = "0.37.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.47.0"
piston2d-opengl_graphics = "0.53.0"
ears = "0.5.0"
failure = "0.1"